3-k8-setup-core/grafana-operator/base/grafana-main.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-localhost
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "grafana.localhost"
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: grafana-main-service
          kind: Service
          port: 3000 # Envoy will talk to your app over port 3000 (HTTP)
